--- a/JianZhiOffer/JianZhiOffer.vcxproj.filters
+++ b/JianZhiOffer/JianZhiOffer.vcxproj.filters
@@ -455,5 +455,8 @@
     <ClCompile Include="II 105.岛屿的最大面积.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="II 106.二分图.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
