--- a/JianZhiOffer/JianZhiOffer.vcxproj.filters
+++ b/JianZhiOffer/JianZhiOffer.vcxproj.filters
@@ -458,5 +458,8 @@
     <ClCompile Include="II 106.二分图.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="II 107.矩阵中的距离.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
