--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -168,6 +168,8 @@
     <ClCompile Include="II 105.岛屿的最大面积.cpp" />
     <ClCompile Include="II 106.二分图.cpp" />
     <ClCompile Include="II 107.矩阵中的距离.cpp" />
+    <ClCompile Include="II 108.单词演变.cpp" />
+    <ClCompile Include="II 109.开密码锁.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="65.不用加减乘除做加法.cpp" />
     <ClCompile Include="49.丑数.cpp" />
