--- a/JianZhiOffer/JianZhiOffer.vcxproj.filters
+++ b/JianZhiOffer/JianZhiOffer.vcxproj.filters
@@ -461,5 +461,11 @@
     <ClCompile Include="II 107.矩阵中的距离.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="II 108.单词演变.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="II 109.开密码锁.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
