--- a/JianZhiOffer/JianZhiOffer.vcxproj.filters
+++ b/JianZhiOffer/JianZhiOffer.vcxproj.filters
@@ -470,5 +470,8 @@
     <ClCompile Include="II 117.相似字符串组.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="II 114.火星词典.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
