--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="II 108.单词演变.cpp" />
     <ClCompile Include="II 109.开密码锁.cpp" />
     <ClCompile Include="II 117.相似字符串组.cpp" />
+    <ClCompile Include="II 114.火星词典.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="65.不用加减乘除做加法.cpp" />
     <ClCompile Include="49.丑数.cpp" />
