--- a/JianZhiOffer/JianZhiOffer.vcxproj
+++ b/JianZhiOffer/JianZhiOffer.vcxproj
@@ -84,11 +84,18 @@
     <ClCompile Include="II 017.最小覆盖子串.cpp" />
     <ClCompile Include="II 018.验证回文串.cpp" />
     <ClCompile Include="II 019. 验证回文串2.cpp" />
+    <ClCompile Include="II 020.回文子串.cpp" />
     <ClCompile Include="II 036.逆波兰表达式求值.cpp" />
     <ClCompile Include="II 037.行星碰撞.cpp" />
     <ClCompile Include="II 038.每日温度.cpp" />
     <ClCompile Include="II 039.柱状图中最大的矩形.cpp" />
     <ClCompile Include="II 040.最大矩形.cpp" />
+    <ClCompile Include="II 062.实现Trie(前缀树).cpp" />
+    <ClCompile Include="II 063.单词替换.cpp" />
+    <ClCompile Include="II 064.实现一个魔法字典.cpp" />
+    <ClCompile Include="II 065.单词的压缩编码源.cpp" />
+    <ClCompile Include="II 066.键值映射.cpp" />
+    <ClCompile Include="II 067.数组中两个数的最大异或值.cpp" />
     <ClCompile Include="II 095.最长公共子序列.cpp" />
     <ClCompile Include="II 096.字符串交织.cpp" />
     <ClCompile Include="43.统计1 ~ n整数中1出现的次数.cpp" />
